Discontinuous cutting with the knife tool #93695
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#93695
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system:Win11/MacOS
Graphics card:RTX3080/5700XT
Blender Version
Broken: 3.0.0 Master - Caused by
6e77afe6ec
Worked: 2.93.6
Short description of error
In the new 3.0, when the knife tool cut Sculpture or scans model, a large number of discontinuous breakpoints will appear.
When the cutting line is long, there may even be more than Dozens breakpoints, and it is difficult to troubleshoot.
In 2.93.6, there are almost no breakpoints in the same operation.
Suggest:
When the cutting tool is cutting a continuous surface, please ensure that the cutting line is also continuous, otherwise you need to check whether the line is continuous after cutting, which is very time-consuming.
Exact steps for others to reproduce the error
Other images:
Added subscriber: @Zenithknight
Added subscribers: @HobbesOS, @mano-wii
Changed status from 'Needs Triage' to: 'Confirmed'
Thanks for the report, I can confirm.
The bug was introduced in
6e77afe6ec
@HobbesOS, can you take a look?
3.0.0 Knife tool issueto Discontinuous cutting with the knife toolApologies, this ticket somehow got lost in my email. Will take a look at it today.
This issue was referenced by
72aefef9d2
This issue was referenced by
1dc0bf86bb
Changed status from 'Confirmed' to: 'Resolved'